# create-process-rust

./: Cargo.toml  LICENSE.txt  README.md  build.rs  cmd.exe.sh  examples.bat  examples.sh  jq-filter.sh
cpp/: .gitignore  UTF8Manifest.xml  build.sh  pargs.cpp
create-strange-commandline/: Cargo.toml
create-strange-commandline/src/: main.rs
docs/: how-is-cmd-special.md
scripts/: batbadbut.sh  cmd-more-verbose.sh  cmd.exe.sh  create-process-pwsh.ps1  examples.bat  examples.sh  p.bat  split-cmdline.sh  test-base64.sh  test-print-inner-cmdline.sh
src/: commandline.rs  input.rs  main.rs  options.rs  output.rs  process.rs  wstr.rs
