[package]
name = "create-process-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
url = "2.3.1"

[dependencies.windows]
version = "0.46.0"
features = [
  "Win32_System_Environment",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security"
]
