[package]
name = "create-process-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-strange-commandline"

[dependencies]
base64 = "0.21.2"
byteorder = "1.4.3"
itertools = "0.10.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
url = "2.3.1"

[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_System_Environment",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_Shell"
]
